@@ -6,7 +6,7 @@ Michiel Broek           mbroek@users.sourceforge.net 2:280/2802
 Ken Bowley              kbowley@users.sourceforge.net, 1:114/485@fidonet
 Redy Rodriguez          redy@users.sourceforge.net 2:283/613.6
 Scott Street            sstreet98@users.sourceforge.net, 1:2600/135@fidonet
-Phil Kimble		kimerud@users.sourceforge.net
+Phil Kimble		kimerud@users.sourceforge.net 1:14/200@fidonet
 
 
 All following people have contributed to the MBSE BBS project. I'm sure that
