@@ -2,7 +2,7 @@ Frequently asked questions for MBSE BBS
 
 
 Author: P.E. Kimble aka King Kimerud
-        kimerud@bayahus.org
+        kimerud@bayhaus.org
 
 
 
