@@ -4063,19 +4063,28 @@ v0.33.17        21-May-2001
 
 v0.33.18        27-Jul-2001
 
+	General:
+		The development team now has five members and the sources are
+		on sourceforge's cvs server.
+		Changed the name to MBSE BBS for Unix instead of Linux.
+		This version is ported but not well tested to FreeBSD.
+
 	Upgrade:
 		In your Mail Transport Agent (if you use it) replace the line
 		"mbmail -r <nexthop> (recipients)" to mbmail "(recipients)".
 		In postfix this is in the master.cf file.
 		With mbsetup menu 1.3.8 fill in the path to the *.msg path.
 
+	MBSE.FAQ:
+		New, maintained by P.E. Kimble aka King Kimerud
+
 	lang:
 		Added Galego language by Redy Rodriguez.
-		Corected Spanish language.
+		Corrected Spanish language.
 
 	SETUP.sh:
 		Doesn't create .huslogin anymore for user bbs.
-		Script does now work on FreeBSD.
+		Script does now work on FreeBSD but needs bash.
 
 	common.a:
 		Corrected some defines in parsedate.c to include/exclude the
@@ -4162,7 +4171,7 @@ v0.33.18        27-Jul-2001
 		The written door.sys file now has EOF character at the end.
 		The written door.sys file now has a : after the comport.
 		Executing doors in nosuid mode (as real user) is now possible.
-		The can be switched on using mbsetup.
+		This can be switched on using mbsetup. Info will be in FAQ.
 		Fixed security problem in Unix username and password entry.
 		Now stoped nicely if started without controling tty.
 		Many bugs fixed in the full screen editor.
